<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:label="@string/title_home"
        android:name="com.example.layali.fragments.home.HomeFragment"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_history"
        android:label="@string/title_history"
        android:name="com.example.layali.fragments.history.HistoryFragment"
        tools:layout="@layout/fragment_history" />

    <fragment
        android:id="@+id/nav_cart"
        android:label="@string/title_cart"
        android:name="com.example.layali.fragments.cart.CartFragment"
        tools:layout="@layout/fragment_cart" />

    <fragment
        android:id="@+id/nav_profile"
        android:label="@string/title_profile"
        android:name="com.example.layali.fragments.profile.ProfileFragment"
        tools:layout="@layout/fragment_profile" />

</navigation>