<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp" >

        <!-- Image du spectacle -->
        <ImageView
            android:id="@+id/iv_show"
            android:layout_width="match_parent"
            android:layout_height="112dp"
            android:contentDescription="@string/app_name"
            android:scaleType="centerCrop" />

        <!-- Titre du spectacle -->
        <TextView
            android:id="@+id/tv_show_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Titre du Spectacle"
            android:textSize="30sp"
            android:textColor="@color/purple_500"
            android:textStyle="bold"
            android:layout_marginBottom="8dp"/>

        <!-- Description -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Description du spectacle :"
            android:textSize="16sp"
            android:textColor="@color/black"
            android:textStyle="bold"
            />

        <TextView
            android:id="@+id/tv_show_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Description du spectacle"
            android:layout_marginRight="8dp"/>
        <!-- Lieu et ville -->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="8dp"
            >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Lieu et ville:"
            android:textSize="16sp"
            android:textColor="@color/black"
            android:textStyle="bold"
            />
        <TextView
            android:id="@+id/tv_show_location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Lieu, Ville"
            android:layout_marginLeft="12dp"
            />

        </LinearLayout>

        <Button
            android:id="@+id/btn_map"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Voir sur la carte"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:layout_marginStart="8dp"
            />

        <!-- Date et heure -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Date et heure :"
            android:textSize="16sp"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:layout_marginTop="8dp"/>
        <TextView
            android:id="@+id/detail_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Date: "
            android:layout_margin="8dp" />

        <TextView
            android:id="@+id/detail_hdebut"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Heure de début: "
            android:layout_margin="8dp" />

    </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/duree"
            android:textSize="16sp"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:layout_marginTop="8dp"/>

        <TextView
            android:id="@+id/detail_duree"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/duree"
            android:layout_marginTop="8dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nb_spectateurs"
            android:textSize="16sp"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:layout_marginTop="8dp"/>

        <TextView
            android:id="@+id/detail_nbrSpectateur"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Nombre de spectateurs: "
            android:layout_marginTop="8dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/price"
            android:textSize="16sp"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:layout_marginTop="8dp"/>

        <TextView
            android:id="@+id/detail_prix"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Prix: "
            android:layout_marginTop="8dp" />

        <!-- Artistes -->
        <TextView
            android:id="@+id/tv_show_rubriques"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Rubriques :"
            android:layout_marginTop="8dp"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_show_rubriques"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp" />

        <!-- Artistes -->
        <TextView
            android:id="@+id/tv_show_artists"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Artists :"
            android:layout_marginTop="8dp"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_show_artists"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp" />

        <TextView
            android:id="@+id/tv_show_cast"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Cast :"
            android:layout_marginTop="8dp"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_show_cast"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp" />

        <!-- Billets -->
        <TextView
            android:id="@+id/tv_show_tickets"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Billets :"
            android:textSize="16sp"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:layout_marginTop="8dp"/>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_margin="8dp">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_margin="8dp"
                android:layout_weight="1">
        <Spinner
            android:id="@+id/spinner_type_billet"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_show_tickets"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            />

            </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="8dp"
            android:layout_weight="1">

            <!-- Bouton Moins -->
            <Button
                android:id="@+id/btn_decrement"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:text="-"
                android:backgroundTint="@color/colorPrimary"
                android:textColor="@android:color/white"
                android:contentDescription="Réduire la quantité"/>

            <!-- Champ de saisie -->
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="horizontal"
                android:outlineAmbientShadowColor="@color/white"
                android:layout_marginHorizontal="8dp"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/tv_quantite"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:hint="Quantité"
                    android:maxLines="1"
                    android:text="1"
                    android:importantForAutofill="no"
                    android:selectAllOnFocus="true"/>


            </com.google.android.material.textfield.TextInputLayout>

            <!-- Bouton Plus -->
            <Button
                android:id="@+id/btn_increment"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:text="+"
                android:backgroundTint="@color/colorPrimary"
                android:textColor="@android:color/white"
                android:contentDescription="Augmenter la quantité"/>

        </LinearLayout>

        </LinearLayout>

        <TextView
            android:id="@+id/tv_total_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Total: "
            android:layout_marginTop="8dp" />

        <ProgressBar
            android:id="@+id/loadingBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            />


        <!-- Boutons pour actions -->
        <Button
            android:id="@+id/btn_reserve"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/add_to_cart"
            android:layout_marginTop="16dp"/>

        <Button
            android:id="@+id/btn_open_website"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/voir_site"
            android:layout_marginTop="8dp"/>
<!--
        <fragment
            android:id="@+id/mapLieu"
            android:name="com.google.android.gms.maps.SupportMapFragment"
            android:layout_width="match_parent"
            android:layout_height="200dp"/>
-->
    </LinearLayout>
</ScrollView>
